Simplify Wangsa and polish the download flow
Replace SQLite with validated text saves beside the JAR so downloaded
apps no longer depend on database native libraries. Preserve task
rollback on failed saves and add easy-start scripts in a portable ZIP.

Align the chat and status panels, tighten input validation, and cover
persistence, layout, and packaging with automated tests. Simplify the
guides while retaining artwork sources and GPT-6 Astra AI disclosure.